# sego

./: CMakeLists.txt  README.md  main.cpp  pluecker.cpp  pluecker_assign.cpp  quadric_solver.cpp  quadric_solver.h  sego.cpp  sego.h  sego_functions.h
